# RandomFieldsUtils

./: README.md
pkg/: DESCRIPTION  NAMESPACE  configure  configure.ac
pkg/R/: RFoptions.R  aaa_auto.R  internal_use.R  utils.R  zzz.R
pkg/inst/include/: AutoRandomFieldsUtils.h  Basic_utils.h  General_utils.h  Options_utils.h  errors_messages.h  kleinkram.h  zzz_RandomFieldsUtils.h
pkg/man/: Print.Rd  RFoptions.Rd  Struve.Rd  cholPosDef.Rd  cpu.Rd  gauss.Rd  hostname.Rd  internal.Rd  matern.Rd  nonstwm.Rd  rowMeansx.Rd  solvePosDef.Rd
pkg/src/: AutoRandomFieldsUtilsLocal.h  Basic_utils.h  Makevars  Makevars.in  RFoptions.cc  RandomFieldsUtils.h  Utils.h  beskf.cc  intrinsics.h  kleinkram.cc  kleinkram.h  linear.cc  maths.cc  options.cc  own.cc  own.h  scalar.cc  scalar.h  solve.cc  sort.cc  utils.cc  win_linux_aux.cc  zzz.c  zzz_RandomFieldsUtils.h
